2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-05-04  Thomas Fitzsimmons  <fitzsim@redhat.com>

        * java/awt/ImageCapabilities.java: Document.

        * java/awt/image/VolatileImage.java: Unindent copyright header.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-05-04  Roman Kennke  <roman@kennke.org>

        * javax/swing/text/AbstractDocument.java
        (LeafElement): Made start and end package private fields for
        effective reindexing.
        * javax/swing/text/PlainDocument.java
        (constructor): The field rootElement is always BranchElement,
        so we handle it as such.
        (removeUpdate): Rewritten reindexing for removeUpdate so that
        the actual removal is taken into account.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-05-04  Roman Kennke  <roman@kennke.org>

        * javax/swing/text/PlainView.java
        (drawUnselectedText): Call Utilities.drawTabbedText() with correct
        offset parameter.
        * javax/swing/text/Utilities.java
        (drawTabbedText): Initilialize local variable pos correctly.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-05-03  Thomas Fitzsimmons  <fitzsim@redhat.com>

        * java/awt/image/VolatileImage.java: Document.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-05-03  Andrew Overholt  <overholt@redhat.com>

        * gnu/java/nio/channels/FileChannelImpl.java: Return null if lock
        could not be acquired.
        * java/nio/channels/FileLock.java (toString): Re-implement to be
        in line with other implementations.

2005-05-15  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-05-03  Thomas Fitzsimmons  <fitzsim@redhat.com>

        * jni/gtk-peer/gnu_java_awt_peer_gtk_GtkToolkit.c
        (init_glib_threads): Check if threading system is already